# Adafruit-Clue

./: README.md  code.py
Adafruit_CircuitPython_Peripherals/: LICENSE  README.rst  README.rst.license  adafruit_peripherals.py  mpy-cross  pyproject.toml  requirements.txt
Adafruit_CircuitPython_Peripherals/examples/: peripherals_simpletest.py
Experiments/: datalogging.py  datetime.py  experiment1.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  experiment6.py  moisture_sensor.py  motor.py  neopixel_code_1.py
Peripherals/: Facade.py  LED.py  MoistureSensor.py  Motor.py  Thermometer.py
Report/: informatics-report.cls  references.bib  report.tex
Report/Chapters/: 1.Background.tex  2.Specification.tex  3.Design.tex  4.Implementation.tex  5.MachineLearningModel.tex  6.Evaluation.tex  7.Conclusion.tex  Body.tex  ProfessionalIssues.tex
Report/FrontMatter/: abstract.tex  acknowledgements.tex
adafruit_peripherals/: Facade.py  FacadeTest.py  LED.py  MoistureSensor.py  Motor.py  Thermometer.py  code.py
